Add the details for a recipe